<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WG Manager</string>
    <string name="add_server">Добавить сервер</string>
    <string name="server_name">Название сервера</string>
    <string name="location">Расположение</string>
    <string name="country_code">Код страны</string>
    <string name="save_server">Сохранить сервер</string>
    <string name="connected">Подключено</string>
    <string name="disconnected">Отключено</string>
    <string name="tap_to_connect">Нажмите для подключения</string>
    <string name="tap_to_disconnect">Нажмите для отключения</string>
    <string name="required_field">Обязательное поле</string>
</resources>
